force-app/main/default/objects/Password__c/Password__c.object-meta.xml
<CustomObject>
    <label>Password</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passwords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>