force-app/main/default/objects/Password__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Controlling_Picklist__c.Field_API_Name__c</field>
            <operation>equals</operation>
            <value>Category__c</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Controlling_Picklist__c</referenceTo>
    <relationshipLabel>Passwords</relationshipLabel>
    <relationshipName>Passwords</relationshipName>
    <type>Lookup</type>
</CustomField>