force-app/main/default/objects/Password__c/fields/lastmodified__c.field-meta.xml
<CustomField>
    <fullName>lastmodified__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lastmodified</label>
    <type>DateTime</type>
</CustomField>