force-app/main/default/objects/Password__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Website</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Category__c</field>
            <operation>equals</operation>
            <valueField>Dependent_Picklist__c.Controlling_Picklist__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Dependent_Picklist__c</referenceTo>
    <relationshipLabel>Passwords</relationshipLabel>
    <relationshipName>Passwords</relationshipName>
    <type>Lookup</type>
</CustomField>