force-app/main/default/objects/Password__c/listViews/All_Passwords.listView-meta.xml
<ListView>
    <fullName>All_Passwords</fullName>
    <columns>NAME</columns>
    <columns>Username__c</columns>
    <columns>Password__c</columns>
    <columns>URL__c</columns>
    <columns>Category__c</columns>
    <columns>Website__c</columns>
    <columns>User__c</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Passwords</label>
</ListView>